# AK-PDF-Scraper

./: .gitignore  Masterlist_Scraper.py  README.md  address.json  cookies.pkl  pdf_scraper.py  pyproject.toml  recaptcha_solver.py  scraperlog.txt  start.json  temp_storage.py  test.py
connection_controllers/: connection_controller.py  gen_connection_controller.py
src/: bulk_downloads.py  contribute_papers.py  digital_ocean_upload.py  donations.py  download_criteria.py  download_papers.py  errors.py  helpers.py  internet_speed.py  main.py  recaptcha_solver.py  temp_storage.py  upload_papers.py  user_agent.py  user_login.py
src/connection_controllers/: connection_controller.py  gen_connection_controller.py
tests/: test_donations.py  test_download_papers.py  test_user_agent.py  test_user_login.py
