[tool.poetry]
name = "pdf_scraper"
version = "0.1.0"
description = ""
authors = ["DanaeBouwer <danae.bouwer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.2.0"
pandas = "^1.4.2"
webdriver-manager = "^3.7.0"
pydub = "^0.25.1"
SpeechRecognition = "^3.8.1"
ffmpy = "^0.3.0"
ffmpeg-python = "^0.2.0"
speedtest-cli = "^2.1.3"
emoji = "^1.7.0"
boto3 = "^1.24.34"
ffmpeg = "^1.4"
termcolor = "^1.1.0"
pyfiglet = "^0.8.post1"
libgen-uploader = "^0.2.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
