[tool.poetry]
name = "pdf_scraper"
version = "0.1.0"
description = ""
authors = ["DanaeBouwer <danae.bouwer@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
selenium = "^4.7.2"
webdriver-manager = "3.8.4"
pydub = "^0.25.1"
SpeechRecognition = "^3.8.1"
speedtest-cli = "^2.1.3"
emoji = "^1.7.0"
boto3 = "^1.24.34"
termcolor = "^1.1.0"
libgen-uploader = "^0.2.0"
packaging = "^21.3"
py-algorand-sdk = "^1.20.1"
auto-py-to-exe = "^2.27.0"
ffmpy = "^0.3.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
